# ZPR22Z-project-EPS

./: .gitignore  CMakeLists.txt  GUIMain.cc  Main.cc  MainGUI.cc  README.md  Utils.hpp  install_wx_widgets.sh
gui/: CMakeLists.txt  GUI.cc  GUI.h  GUIUtils.hpp
src/: Algorithm.cc  Algorithm.h  Algorithm.hpp  CMakeLists.txt  DifferenceVisitor.cc  DifferenceVisitor.h  EPSCommandRepresentation.cc  EPSCommandRepresentation.h  EPSDrawing.cc  EPSDrawing.h  EPSFileTools.cc  EPSFileTools.h  EPSFileTools.hpp  GUI.cc  GUI.h  GUIUtils.hpp  GraphicCommands.cc  GraphicCommands.h  MidpointVisitor.cc  MidpointVisitor.h  PictureEPS.cc  PictureEPS.cpp  PictureEPS.h  Scalar2DRepresentation.cc  Scalar2DRepresentation.h  Visitor.cc  Visitor.h  doxy_config  utils.hpp
src/html/: Algorithm_8hpp_source.html  EPSCommandRepresentation_8h_source.html  EPSFileTools_8hpp_source.html  GraphicCommands_8h_source.html  Scalar2DRepresentation_8h_source.html  annotated.html  classAbsoluteCommand-members.html  classAbsoluteCommand.html  classAbsoluteCommand__coll__graph.map  classAbsoluteCommand__coll__graph.md5  classAbsoluteCommand__inherit__graph.map  classAbsoluteCommand__inherit__graph.md5  classAlgorithm-members.html  classAlgorithm.html  classCommand-members.html  classCommand.html  classCommand__inherit__graph.map  classCommand__inherit__graph.md5  classCoordinateValue-members.html  classCoordinateValue.html  classEPSInFile-members.html  classEPSInFile.html  classEPSOutFile-members.html  classEPSOutFile.html  classHeader-members.html  classHeader.html  classLeftLineCommand-members.html  classLeftLineCommand.html  classLeftLineCommand__coll__graph.map  classLeftLineCommand__inherit__graph.md5  classMoveCommand-members.html  classMoveCommand.html  classMoveCommand__coll__graph.map  classMoveCommand__coll__graph.md5  classNonProcessableCommand-members.html  classNonProcessableCommand.html  classNonProcessableCommand__coll__graph.md5  classNonProcessableCommand__inherit__graph.map  classPointCommand-members.html  classPointCommand.html  (+42 more)
src/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  searchdata.js
src/latex/: annotated.tex  classAbsoluteCommand.tex  classAbsoluteCommand__coll__graph.md5  classAbsoluteCommand__inherit__graph.md5  classAlgorithm.tex  classCommand.tex  classCommand__inherit__graph.md5  classCoordinateValue.tex  classEPSInFile.tex  classEPSOutFile.tex  classHeader.tex  classLeftLineCommand.tex  classLeftLineCommand__coll__graph.md5  classMoveCommand.tex  classMoveCommand__inherit__graph.md5  classNonProcessableCommand.tex  classNonProcessableCommand__inherit__graph.md5  classPointCommand.tex  classPointCommand__coll__graph.md5  classProcessableCommand.tex  classProcessableCommand__coll__graph.md5  classProcessableCommand__inherit__graph.md5  classRelativeCommand.tex  classRelativeCommand__coll__graph.md5  classRelativeCommand__inherit__graph.md5  classResolution.tex  classRightLineCommand.tex  classRightLineCommand__inherit__graph.md5  hierarchy.tex  refman.tex
tests/: AlgorithmTest.cc  CMakeLists.txt  EPSCommandRepresentationTest.cc  EPSFileToolsTest.cc  GraphicCommandTest.cc  PictureEPSTest.cc  Scalar2DRepresentationTest.cc  VisitorTest.cc
